--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -12,6 +12,8 @@ cite {
 #external-links ul {
   list-style-type: none;
   padding-left: 0px;
+  width: 200px;
+  
 }
 
 /* you're welcome to edit the
@@ -29,4 +31,12 @@ figure {
 figcaption {
   font-style: italic;
   text-align: right;
+}
+
+body {
+  width: 960px;
+}
+
+main {
+  width: 756px;
 }
